# ParticleEvaluationTool

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/ParticleEvaluationTool/: CMakeLists.txt  ParticleEvaluationTool.cpp  ParticleEvaluationTool.h  ParticleEvaluationTool.qrc  ParticleEvaluationTool.ui  ParticleEvaluationTool_.ui  ResultSettingsDialog.cpp  ResultSettingsDialog.h  ResultSettingsDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  main.cpp
src/PartilcleEvaluationModel/: CMakeLists.txt  ConnectionUtilities.cpp  ConnectionUtilities.h  DatasetParser.cpp  DatasetParser.h  EvaluationDataPoint.cpp  EvaluationDataPoint.h  EvaluationSettings.cpp  EvaluationSettings.h  MeasuringType.h  ParticleDataSet.cpp  ParticleDataSet.h  ParticleEvaluationController.cpp  ParticleEvaluationController.h  ParticleEvaluator.cpp  ParticleEvaluator.h  PartilcleEvaluationModel.cpp  PartilcleEvaluationModel.h  StringUtitlities.cpp  StringUtitlities.h  partilcleevaluationmodel_global.h
